2018-06-24  Janik Rabe  <oidentd@janikrabe.com>

	* Make `--forward` imply `--masquerade`.
	* Log warning when connection limit is exceeded.

2018-06-13  Janik Rabe  <oidentd@janikrabe.com>

	* Released as version 2.3.1.
	* Fix build with libnetfilter_conntrack on Linux.

2018-06-12  Janik Rabe  <oidentd@janikrabe.com>

	* Released as version 2.3.0.
	* Forward declare yyrestart and yylex.
	* Change sock_write and sockprintf signatures.
	* Change get_hostname to use socklen_t.
	* Change get_ip to use socklen_t.
	* Fix a few signed/unsigned conversion issues.
	* Add default cases to switch statements.

2018-05-16  Jan Alexander Steffens  <jan.steffens@gmail.com>

	* Move reply data into union.
	* Add out_hide label to get_ident.
	* Move request forwarding to forward.c.
	* Implement forward capability.
	* Document forward capability.

2018-05-04  Janik Rabe  <oidentd@janikrabe.com>

	* Consistently use ssize_t in sock_read.

2018-04-07  Janik Rabe  <oidentd@janikrabe.com>

	* Fix a few signed/unsigned conversion issues.
	* Remove some redundant redeclarations.

2018-04-06  Janik Rabe  <oidentd@janikrabe.com>

	* Add Linux IPv6 masquerading support.
	* Always use libnetfilter_conntrack when available.
	* Fix signed/unsigned bit shifting on Linux.
	* Separate declarations from code (ISO C90).
	* Made a couple of function arguments constant.
	* Fix incorrect conversion from ssize_t to int.
	* Fix incorrect vasprintf return type.
	* Remove unused type parameter from callback_nfct.
	* Prevent overflows when parsing UIDs and GIDs.

2018-04-04  Janik Rabe  <oidentd@janikrabe.com>

	* Add build information to `--version` output.

2018-04-03  Janik Rabe  <oidentd@janikrabe.com>

	* Add spoofed replies to the default configuration file.

2018-03-30  Janik Rabe  <oidentd@janikrabe.com>

	* Released as version 2.2.3.
	* On systems where oidentd needs to run as root, do not drop
	  privileges automatically and show a warning instead.
